# ROS2_NLP

./: README.md
nlp_connector/: package.xml  setup.cfg  setup.py
nlp_connector/nlp_connector/: nlp_connector_client.py  nlp_connector_server.py
nlp_connector_dependencies/: CMakeLists.txt  package.xml
nlp_connector_dependencies/msg/: NLPType.msg
nlp_connector_dependencies/srv/: NLPSrv.srv
